--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        window.location.assign("portfolio/index.html");
+        window.location.assign("Portales/index.html");
     </script>
 </body>
 </html>
