--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Portafolio</title>
 </head>
 <body>
+    <h1>Hola</h1>
     <script>
-        window.location.assign("Portales/index.html");
+        window.location.assign("Portales/portfolio/index.html");
     </script>
 </body>
 </html>
