--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hola</h1>
     <script>
-        window.location.assign("Portales/portfolio/index.html");
+        window.location.assign("portfolio/index.html");
     </script>
 </body>
 </html>
